NEW249621
Caret Line Height is not matching font size
https://bugs.webkit.org/show_bug.cgi?id=249621
Summary Caret Line Height is not matching font size
Ahmad Saleem
Reported 2022-12-19 17:18:35 PST
Hi Team, While trying to find for broken testcase of HTML Editing bug, I came cross bug in line height issue in the following testcase: Test Case - https://jsfiddle.net/tck7m2qL/ ^ Try to type after the "grey" container and observer caret size (I-Beam), it would be huge and size of container in Safari 16.2 & STP160. While Firefox Nightly 110 and Chrome Canary 111 show normal caret size (Firefox does not have any container and show in "normal" size since beginning while Chrome Canary show "Big" one till we don't type first character and then it will show "normal" caret size). Just wanted to raise this bug so it can be tracked and if it is duplicate then please close it. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-26 17:19:14 PST
Joone Hur
Comment 2 2023-08-13 05:58:39 PDT
Joone Hur
Comment 4 2023-11-14 22:00:30 PST
It looks almost the same to get the caret height from the Chromium implementation and my patch. The problem seems to be that the caret isn't rendering correctly on iOS because the top was calculated incorrectly. So, I've updated the part where the top is calculated. Thanks for the info.
Joone Hur
Comment 5 2023-11-15 18:08:51 PST
*** Bug 13820 has been marked as a duplicate of this bug. ***
Joone Hur
Comment 6 2023-11-15 18:13:14 PST
*** Bug 116424 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.