Match caret height with font size instead of line height https://bugs.webkit.org/show_bug.cgi?id=249621 rdar://problem/103716521

Reviewed by NOBODY (OOPS!).

This commit resolves a problem where the caret height
didn't correctly correspond to the font size, leading to
visual inconsistencies.

* LayoutTests/editing/caret/ios/caret-in-overflow-area-expected.txt: rebaseline
* LayoutTests/editing/selection/ios/hide-selection-after-hiding-contenteditable-expected.txt: rebaseline
* Source/WebCore/rendering/CaretRectComputation.cpp:
(WebCore::computeCaretRectForLinePosition): update as above
(WebCore::computeCaretRectForText):
(WebCore::computeCaretRectForLineBreak):